# nextcloud

./: LICENSE  README.md  pyproject.toml  reqirements.txt
.github/workflows/: publish-to-pypi.yml
src/: __init__.py
src/nextcloud/: __init__.py
src/nextcloud/bot/: __init__.py  async_bot.py  bot.py  models.py
src/nextcloud/bot/core/: bot_core.py  models.py
src/nextcloud/bot/http/: async_.py  base.py  sync.py
src/nextcloud/email/: __init__.py  client.py
